--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bn.js": "^5.1.3",
     "clipboard-polyfill": "^3.0.1",
     "lodash.throttle": "^4.1.1",
+    "lodash.uniqby": "^4.7.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
