--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lodash.uniqby": "^4.7.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-loader-spinner": "^3.1.14",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-spring": "^7.2.10",
